support keyboard mouse scroll

--- a/client/session.html
+++ b/client/session.html
@@ -14,6 +14,6 @@
   </head>
 
   <body onload="init()">
-    <canvas id="playerDom" ></canvas>
+    <canvas id="player"></canvas>
   </body>
 </html>
